kubernetes-manifest/staging.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chaos-website-service
spec:
  selector:
    app: demoApp
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 80
    - protocol: TCP
      port: 50050
      targetPort: 50050
      nodePort: 50050
