kubernetes-manifest/staging.ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-web
  namespace: default
spec:
  rules:
  - host: www.chaos-website.com
    http:
      paths:
      - backend:
          serviceName: chaos-website
          servicePort: 80
        path: /
  - host: www.chaos-website-staging.com
    http:
      paths:
      - backend:
          serviceName: chaos-website
          servicePort: 50050
        path: /
